src/test/deca/syntax/invalid/missing_parenthesis.deca
// Description :
//    parenthèse fermante manquante
//
// Resultats :
//    Erreur syntaxique
//    Ligne 8 : no viable alternative at input 'int'

int a = 5;
int b = (a + 2;  // parenthèse fermante manquante
